syntax = "proto3";

package cloudstate;

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/duration.proto";

import "cloudstate/entity_key.proto";

option java_package = "io.cloudstate.keyvaluestore";
option java_outer_classname = "KeyValueStoreProtos";

service KeyValueStore {
    rpc GetState(GetStateEnvelope) returns (GetStateResponseEnvelope) {}
    rpc SaveState(SaveStateEnvelope) returns (google.protobuf.Empty) {}
    rpc DeleteState(DeleteStateEnvelope) returns (google.protobuf.Empty) {}
}

message DeleteStateEnvelope {
    string key = 1 [(.cloudstate.entity_key) = true];
    StateOptions options = 2;
    string etag = 3;
}

message SaveStateEnvelope {
    string key = 1 [(.cloudstate.entity_key) = true];
    google.protobuf.Any value = 2;
    string etag = 3;
    map<string,string> metadata = 4;
    StateRequestOptions options = 5;
}

message GetStateEnvelope {
    string key = 1 [(.cloudstate.entity_key) = true];
    string etag = 2;
}

message GetStateResponseEnvelope {
    google.protobuf.Any data = 1;
    string etag = 2;
}

message StateOptions {
    string concurrency = 1;
    string consistency = 2;
}

message StateRequestOptions {
    string concurrency = 1;
    string consistency = 2;
}
